[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/TextBox/Textbox.png" type="Texture" id=1]
[ext_resource path="res://Controller/Components/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://Controller/Components/DialogueComponent.gd" type="Script" id=3]
[ext_resource path="res://Assets/TextBox/Button.png" type="Texture" id=4]
[ext_resource path="res://Fonts/RobotoMono-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/TextBox/Name Box.png" type="Texture" id=6]
[ext_resource path="res://Fonts/RobotoMono-Medium.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 7 )

[node name="DialogueComponent" type="Control"]
anchor_left = 0.000604659
anchor_right = 1.0006
anchor_bottom = 1.0
margin_left = 0.178772
margin_top = 0.619171
margin_right = 0.178833
margin_bottom = 0.619141
focus_mode = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -471.997
margin_top = -233.0
margin_right = 473.003
margin_bottom = -22.0
focus_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
dialogue = [ "Uma vez Flamengo, sempre Flamengo,", "Flamengo sempre eu hei de ser,", "É meu maior prazer, vê-lo brilhar,", "Seja na terra, seja no mar,", "vencer, vencer, vencer,", "uma vez Flamengo, Flamengo até morrer!" ]

[node name="CharacterImage" type="TextureRect" parent="DialogueBox"]
anchor_left = 0.53
anchor_top = 1.104
anchor_right = 0.53
anchor_bottom = 1.104
margin_left = -354.85
margin_top = -673.944
margin_right = 357.15
margin_bottom = -0.94397
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameBox" type="TextureRect" parent="DialogueBox"]
anchor_left = 0.04
anchor_top = 0.039
anchor_right = 0.04
anchor_bottom = 0.039
margin_left = -94.8
margin_top = -50.229
margin_right = 95.2
margin_bottom = 5.771
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTextLabel" type="RichTextLabel" parent="DialogueBox"]
anchor_left = -0.018
anchor_top = 0.041
anchor_right = -0.018
anchor_bottom = 0.043
margin_left = 3.01
margin_top = -35.651
margin_right = 114.01
margin_bottom = -3.073
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Rampage"
text = "Rampage"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DialogueBox"]
anchor_left = -0.126
anchor_right = 1.116
anchor_bottom = 1.0
margin_left = 0.0699997
margin_right = 0.380005
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueBox"]
anchor_left = -0.058
anchor_right = 1.029
anchor_bottom = 1.0
margin_left = 40.2555
margin_top = 26.0
margin_right = -35.9596
margin_bottom = -29.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "-"
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="DialogueBox"]
margin_left = 845.0
margin_top = 140.0
margin_right = 980.0
margin_bottom = 189.0
action_mode = 0
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogueBox"]

[node name="TweenCharacter" type="Tween" parent="DialogueBox"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DialogueBox"]

[node name="DialogueTween" type="Tween" parent="."]
[connection signal="mouse_entered" from="DialogueBox/Button" to="DialogueBox" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="DialogueBox/Button" to="DialogueBox" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="DialogueBox/Button" to="DialogueBox" method="_on_Button_pressed"]
[connection signal="tween_completed" from="DialogueBox/Tween" to="DialogueBox" method="_on_Tween_tween_completed"]
